--- a/requirements.txt
+++ b/requirements.txt
@@ -77,6 +77,11 @@ isort==5.12.0
 mkdocs==1.5.3
 mkdocs-material==9.4.14
 
+# Reporting and Export
+reportlab==4.0.7
+xlsxwriter==3.1.9
+Jinja2==3.1.2
+
 # Utilities
 click==8.1.7
 rich==13.7.0
